WIP - Simplified SSE without watermill
 - start using tailwind
